--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.4"
+    "@fontsource/preahvihear": "^5.2.7",
+    "@tailwindcss/vite": "^4.1.14",
+    "astro": "^5.14.4",
+    "tailwindcss": "^4.1.14"
   }
 }
